--- a/BMRFME.VanillaPermissionProvider/BMRFME.VBulletinPermissionProvider.csproj
+++ b/BMRFME.VanillaPermissionProvider/BMRFME.VBulletinPermissionProvider.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConnectionAttempt.cs" />
     <Compile Include="GUID.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VBulletinPermissionProvider.cs" />
