Basic spam control

--- a/BMRFME.VanillaPermissionProvider/BMRFME.VBulletinPermissionProvider.csproj
+++ b/BMRFME.VanillaPermissionProvider/BMRFME.VBulletinPermissionProvider.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BattleNET, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\BMRFME.Whitelister\lib\BattleNET.dll</HintPath>
+    </Reference>
     <Reference Include="EasyConfig">
       <HintPath>..\BMRFME.Whitelister\lib\EasyConfig.dll</HintPath>
     </Reference>
@@ -57,6 +61,9 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)\BMRFME.Whitelister\bin\Debug\plugins"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
