--- a/BMRFME.VanillaPermissionProvider/BMRFME.VBulletinPermissionProvider.csproj
+++ b/BMRFME.VanillaPermissionProvider/BMRFME.VBulletinPermissionProvider.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectionAttempt.cs" />
+    <Compile Include="Firewall.cs" />
     <Compile Include="GUID.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VBulletinPermissionProvider.cs" />
@@ -59,6 +60,17 @@
       <Project>{bdb5929c-3c3a-4a4d-b37a-6e7f84ec1533}</Project>
       <Name>BMRFME.Whitelist</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="NetFwTypeLib">
+      <Guid>{58FBCF7C-E7A9-467C-80B3-FC65E8FCCA08}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
